@@ -17085,7 +17085,7 @@
 		<attribute key="weight" value="950" />
 		<attribute key="armor" value="2" />
 		<attribute key="slotType" value="feet" />
-		<attribute key="absorbpercentfirefield" value="90" />
+		<!-- <attribute key="absorbpercentfirefield" value="90" /> -->
 		<attribute key="decayTo" value="10022" />
 		<attribute key="transformDeEquipTo" value="9933" />
 		<attribute key="duration" value="3600" />
