@@ -79,7 +79,8 @@ enum clientVersion_t
 	CLIENT_VERSION_872 = 25,
 	CLIENT_VERSION_873 = 26,
 	CLIENT_VERSION_900 = 27,
-	CLIENT_VERSION_910 = 28
+	CLIENT_VERSION_910 = 28,
+	CLIENT_VERSION_920 = 29
 };
 
 enum rootattrib_
